Fix calendar more button styling
Button was overlapping table in certain scenarios due to absolute
positioning. Removed absolute and issue is fixed.

--- a/website/static/scss/main.scss
+++ b/website/static/scss/main.scss
@@ -56,11 +56,11 @@ main {
     border: 1px solid rgba(0,0,0,0);
 }
 
-.dashboard-card-more {
+/* .dashboard-card-more {
     position: absolute;
     bottom: 0;
     right: 0;
-}
+} */
 
 .mdl-grid {
     width: 100vw;
